# stremera

./: .gitignore  GITHUB_UPDATES.md  README.md  biome.json  eslint.config.js  implementation_tracker.md  index.html  new_features.md  package-lock.json  package.json  vite.config.ts
.claude/rules/: rules.instructions.md
.github/workflows/: release.yml
scripts/: build-tauri.ps1  clean-tauri.ps1  release-version.mjs
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  downloader.rs  lib.rs  main.rs  operational_log.rs
src-tauri/src/commands/: app_update_commands.rs  browse_commands.rs  config_commands.rs  config_store.rs  download_commands.rs  episode_navigation.rs  history_helpers.rs  history_playback_commands.rs  language.rs  library_commands.rs  list_commands.rs  list_helpers.rs  media_commands.rs  media_normalization.rs  next_playback_commands.rs  playback_preferences_commands.rs  playback_state.rs  playback_state_commands.rs  resume_store.rs  search_commands.rs  search_history_commands.rs  startup_migrations.rs  store_helpers.rs  stream_commands.rs  stream_coordinator.rs  stream_fetcher.rs  stream_resolver.rs  streaming_helpers.rs  tests.rs  watch_history_commands.rs  watch_status_commands.rs
src-tauri/src/providers/: addons.rs  cinemeta.rs  kitsu.rs  mod.rs  netflix.rs  realdebrid.rs  skip_times.rs  stremio_addon.rs  torrentio.rs
src-tauri/src/providers/kitsu/: supplements.rs
src-tauri/windows/: installer-hooks.nsh
src/lib/: api-core.ts  (+27 more)
(+91 files in other folders)
