[package]
name = "streamy"
version = "0.2.0"
description = "A Stremio Alternative"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "streamy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2.10.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "native-tls", "stream", "gzip", "deflate", "brotli"], default-features = false }
tauri-plugin-store = "2.4.2"
tauri-plugin-http = "2.5.7"
tauri-plugin-libmpv = "0.3.2"
regex = "1.12.2"
tokio = { version = "1.49.0", features = ["time"] }
urlencoding = "2.1.3"
uuid = { version = "1.21.0", features = ["v4", "serde"] }
futures-util = "0.3.32"
tauri-plugin-dialog = "2.6.0"

[profile.dev]
incremental = true
debug = 1

[profile.dev.package."*"]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 8
panic = "abort"
